--- a/src/main/resources/templates/frags.html
+++ b/src/main/resources/templates/frags.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}"/>
+    <link th:rel="stylesheet" th:href="@{/css/style.css}"/>
+
     <title th:text="${title}"></title>
 </head>
 </th:block>
