--- a/src/main/resources/templates/frags.html
+++ b/src/main/resources/templates/frags.html
@@ -20,7 +20,10 @@
           <h5 th:text="${pizza.name}" class="card-title"></h5>
           <p th:text="${pizza.description}" class="card-text"></p>
           <p th:text="'Prezzo: ' + ${#numbers.formatDecimal(pizza.price/100, 0, 'COMMA', 2, 'COMMA')} + '&euro;'" class="card-text"></p>
-          <a th:href="@{/pizza/{id}(id=*{pizza.id})}" class="btn btn-primary">Acquista</a>
+          <a th:if="${pizzas != null}" th:href="@{/pizzas/{id}(id=*{pizza.id})}" class="btn btn-primary">Dettagli</a>
+          <a th:if="${pizzas == null}" th:href="@{/pizzas}" class="btn btn-danger">Torna indietro</a>
+
+          
         </div>
       </div>
 
