--- a/src/main/resources/templates/pizza/pizza-show.html
+++ b/src/main/resources/templates/pizza/pizza-show.html
@@ -1,8 +1,10 @@
 <th:block th:replace="frags :: head('Lista pizze')">
 </th:block>
 <body>
-    <main>
+    <header>
         <h1 class="text-center mb-3">Ecco a te, la pizza selezionata</h1>
+    </header>
+    <main>
         <div class="container-fluid">
             <div class="d-flex justify-content-center">
                 <div
