--- a/src/main/resources/templates/pizza/pizza-show.html
+++ b/src/main/resources/templates/pizza/pizza-show.html
@@ -2,7 +2,7 @@
 </th:block>
 <body>
     <header>
-        <h1 class="text-center mb-3">Ecco a te, la pizza selezionata</h1>
+        <h1 class="text-center text-yellow mb-3">Ecco a te, la pizza selezionata</h1>
     </header>
     <main>
         <div class="container-fluid">
