--- a/src/main/resources/templates/pizza/pizza-show.html
+++ b/src/main/resources/templates/pizza/pizza-show.html
@@ -9,7 +9,7 @@
             <div class="d-flex justify-content-center">
                 <div
                 th:insert="frags :: bsCard(${pizza})">
-                               <a th:replace="frags :: buttonr('Torna indietro', @{/pizzas})">aaa</a>  
+                               <a th:replace="frags :: buttonr('Torna indietro', @{/pizzas})"></a>  
          
                 </div>
                 
@@ -18,3 +18,4 @@
     </main> 
 </body>
 </html>
+
