--- a/src/main/resources/templates/pizza/pizza-create.html
+++ b/src/main/resources/templates/pizza/pizza-create.html
@@ -7,22 +7,22 @@
     <main>
         <div class="container-fluid">
             <div class="d-flex justify-content-center">
-                <form class="p-4 my-form" method="post">
+                <form class="p-4 my-form" method="post" th:object="${pizza}">
                     <div class="mb-3">
                         <label for="name" class="form-label">Nome</label>
-                        <input type="text" class="form-control" for="name" placeholder="Nome della pizza">
+                        <input type="text" class="form-control" for="name" placeholder="Nome della pizza" th:field="*{name}">
                       </div>
                       <div class="mb-3">
                         <label for="description" class="form-label">Descrizione</label>
-                        <textarea type="text" class="form-control" for="description" placeholder="Aggiungi informazioni sulla pizza"></textarea>
+                        <textarea type="text" class="form-control" for="description" placeholder="Aggiungi informazioni sulla pizza" th:field="*{description}"></textarea>
                       </div>
                       <div class="mb-3">
                         <label for="url" class="form-label">URL dell'immagine</label>
-                        <input type="url" class="form-control" for="imageUrl" placeholder="Inserisci URL">
+                        <input type="url" class="form-control" for="imageUrl" th:field="*{imageUrl}" placeholder="Inserisci URL">
                       </div>
                       <div class="mb-3">
                         <label for="price" class="form-label">Prezzo</label>
-                        <input type="number" class="form-control" for="price" placeholder="1.00">
+                        <input type="number" class="form-control" for="price" th:field="*{price}" step=".01" >
                       </div>
                       <div class="mb-3 d-flex">
                         <button type="submit" class="btn btn-primary me-2">Aggiungi</button>
