--- a/src/main/resources/templates/frags.html
+++ b/src/main/resources/templates/frags.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}"/>
+
     <link th:rel="stylesheet" th:href="@{/css/style.css}"/>
 
     <title th:text="${title}"></title>
@@ -15,7 +16,7 @@
 <body>
 
     <div th:fragment="bsCard(pizza)" class="card" style="width: 18rem;">
-        <img th:src="${pizza.imageUrl}" class="card-img-top" th:alt="${pizza.name}">
+        <img th:src="${pizza.imageUrl != '' ? pizza.imageUrl : 'https://rejse-glæde.dk/wp-content/themes/klikko3_b_18_07_2023/dest/images/no-image.png'}" class="card-img-top" th:alt="${pizza.name}">
         <div class="card-body">
           <h5 th:text="${pizza.name}" class="card-title"></h5>
           <p th:text="${pizza.description}" class="card-text"></p>
