Changed titles of pages

--- a/src/main/resources/templates/pizza/pizza-create.html
+++ b/src/main/resources/templates/pizza/pizza-create.html
@@ -1,4 +1,4 @@
-<th:block th:replace="frags :: head('Lista pizze')">
+<th:block th:replace="frags :: head('Aggiungi pizza')">
 </th:block>
 <body>
     <header>
