--- a/src/main/resources/templates/pizza/pizza-show.html
+++ b/src/main/resources/templates/pizza/pizza-show.html
@@ -1,4 +1,4 @@
-<th:block th:replace="frags :: head('Lista pizze')">
+<th:block th:replace="frags :: head('Dettaglio pizza: ' + ${pizza.name})">
 </th:block>
 <body>
     <header>
