--- a/src/main/resources/templates/frags.html
+++ b/src/main/resources/templates/frags.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}"/>
 
     <link th:rel="stylesheet" th:href="@{/css/style.css}"/>
@@ -19,9 +20,12 @@
         <img th:src="${pizza.imageUrl != '' ? pizza.imageUrl : 'https://rejse-glæde.dk/wp-content/themes/klikko3_b_18_07_2023/dest/images/no-image.png'}" class="card-img-top" th:alt="${pizza.name}">
         <div class="card-body">
           <h5 th:text="${pizza.name}" class="card-title"></h5>
-          <p th:text="${pizza.description}" class="card-text"></p>
-          <p th:text="'Prezzo: ' + ${#numbers.formatDecimal(pizza.price/100, 0, 'COMMA', 2, 'COMMA')} + '&euro;'" class="card-text"></p>
-          <a th:if="${pizzas != null}" th:href="@{/pizzas/{id}(id=*{pizza.id})}" class="btn btn-primary">Dettagli</a>
+          <p th:if="${pizzas == null}" th:text="${pizza.description}" class="card-text"></p>
+          <p th:if="${pizzas == null}" th:text="'Prezzo: ' + ${#numbers.formatDecimal(pizza.price/100, 0, 'COMMA', 2, 'COMMA')} + '&euro;'" class="card-text"></p>
+          <a th:if="${pizzas != null}" th:href="@{/pizzas/{id}(id=*{pizza.id})}" class="btn btn-primary"><i class="fa-solid fa-eye"></i></a>
+          <a th:if="${pizzas != null}" th:href="@{/pizzas/update/{id}(id=*{pizza.id})}" class="btn btn-info"><i class="fa-solid fa-pencil"></i></a>
+          <a th:if="${pizzas != null}" th:href="@{/pizzas/{id}(id=*{pizza.id})}" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i></a>
+
           <a th:if="${pizzas == null}" th:href="@{/pizzas}" class="btn btn-danger">Torna indietro</a>
 
           
