--- a/src/main/resources/templates/pizza/pizza-create.html
+++ b/src/main/resources/templates/pizza/pizza-create.html
@@ -2,7 +2,7 @@
 </th:block>
 <body>
     <header>
-        <h1 class="text-center text-yellow mb-3">Crea una nuova pizza</h1>
+        <h1 th:text="${pizza.id < 1 ? 'Crea una nuova pizza' : 'Modifica la pizza con ID: ' + pizza.id}" class="text-center text-yellow mb-3"></h1>
     </header>
     <main>
         <div class="container-fluid">
@@ -25,7 +25,7 @@
                       </div>
                       <div class="mb-3">
                         <label for="url" class="form-label">URL dell'immagine</label>
-                        <input type="url" class="form-control" for="imageUrl" th:field="*{imageUrl}" placeholder="Inserisci URL" th:classappend="${#fields.hasErrors('imageUrl') ? 'is-invalid': ''}">
+                        <input type="text" class="form-control" for="imageUrl" th:field="*{imageUrl}" placeholder="Inserisci URL" th:classappend="${#fields.hasErrors('imageUrl') ? 'is-invalid': ''}">
                         <div class="alert alert-danger" role="alert" th:if="${#fields.hasErrors('imageUrl')}">
                             <p th:each="err : ${#fields.errors('imageUrl')}" th:text="${err}" class="m-0 text-danger"></p>
                           </div>
