--- a/src/main/resources/templates/pizza/pizza-index.html
+++ b/src/main/resources/templates/pizza/pizza-index.html
@@ -3,7 +3,7 @@
 <body>
     <header>
         <div class="position-relative">
-        <h1 class="text-yellow text-center">Le nostre pizze</h1>
+        <h1 class="text-yellow text-center">Gestione pizze</h1>
         <a class="btn btn-warning position-absolute" id="add-button" th:href="@{/pizzas/create}">Aggiungi una pizza</a>
     </div>
     </header>
