--- a/src/main/resources/templates/pizza/pizza-index.html
+++ b/src/main/resources/templates/pizza/pizza-index.html
@@ -9,6 +9,10 @@
     </header>
     <main>
         <div class="container-fluid">
+			<div th:if="${deleteMessage != undefined}" class="d-flex justify-content-center">
+			<div th:text="${deleteMessage}" class="alert alert-success" role="alert">
+					</div>
+				</div>
             <div class="d-flex justify-content-center">
                 <form id="search">
                     <div class="input-group mb-3">
