--- a/src/main/resources/templates/pizza/pizza-show.html
+++ b/src/main/resources/templates/pizza/pizza-show.html
@@ -6,7 +6,12 @@
     </header>
     <main>
         <div class="container-fluid">
+			<div th:if="${updateMessage != undefined}" class="d-flex justify-content-center">
+			<div th:text="${updateMessage}" class="alert alert-success" role="alert">
+					</div>
+				</div>
             <div class="d-flex justify-content-center">
+					
                 <div
                 th:insert="frags :: bsCard(${pizza})">
                                <a th:replace="frags :: buttonr('Torna indietro', @{/pizzas})"></a>  
